undo: do not merge separate replace actions

CCMAIL: bbeschow@cs.tu-berlin.de
BUG: 222389